--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
-    "routes": [
-        {
-            "src": "/[^.]+",
-            "dest": "/"
-        }
-    ]
+  "routes": [
+    {
+      "src": "/[^.]+",
+      "dest": "/"
+    }
+  ],
+  "engines": {
+    "node": ">=18.x"
+  }
 }
