--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/form": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/modals": "^7.12.2",
+    "@swc/core": "^1.7.26",
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
